--- a/src/.gitignore
+++ b/src/.gitignore
@@ -3,3 +3,4 @@ workshop_2/.ipynb_checkpoints
 workshop_3/.ipynb_checkpoints
 workshop_4/.ipynb_checkpoints
 workshop_5/.ipynb_checkpoints
+workshop_3/mnist_train.csv
